--- a/src/components/propertyList/propertyList.css
+++ b/src/components/propertyList/propertyList.css
@@ -19,9 +19,11 @@
     object-fit: cover;
   }
   
+  
   .pListTitles>h1{
     font-size: 18px;
     color: #444;
+    text-transform: capitalize;
   }
   
   .pListTitles>h2{
