--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,10 +1,10 @@
-.login {
+/* .login {
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
    
-  }
+  } */
   
   .lContainer {
     display: flex;
@@ -19,6 +19,8 @@
   .lInput{
     height: 30px;
     padding: 10px;
+    border: none;
+    border-bottom: 1px solid black;
   }
   
   .lButton {
